# falocalrepo-database

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
falocalrepo_database/: __init__.py  __version__.py  _database.py  column.py  database.py  exceptions.py  journals.py  merge.py  selector.py  settings.py  submissions.py  tables.py  types.py  update.py  users.py  util.py
falocalrepo_database/database_update/: __init__.py  update.py
