[tool.poetry]
name = "falocalrepo-database"
version = "4.19.0"
description = "Database functionality for falocalrepo."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://gitlab.com/MatteoCampinoti94/falocalrepo-database"
repository = "https://gitlab.com/MatteoCampinoti94/falocalrepo-database"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Database",
]

[tool.poetry.dependencies]
python = "^3.9"
filetype = "^1.0.7"
chardet = "^4.0.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
