[tool.poetry]
name = "falocalrepo-database"
version = "5.2.0"
description = "Database functionality for falocalrepo."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/falocalrepo-database"
repository = "https://github.com/FurryCoders/falocalrepo-database"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Database",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/FurryCoders/falocalrepo-database/blob/master/CHANGELOG.md"
"Source" = "https://github.com/FurryCoders/falocalrepo-database"
"Download" = "https://pypi.org/project/falocalrepo-database/#files"

[tool.poetry.dependencies]
python = "^3.10"
filetype = "^1.0.10"
chardet = "^4.0.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
